tests/lean/nonAtomicFieldName.lean.expected.out
nonAtomicFieldName.lean:2:2-2:5: error: invalid field name 'a.b', field names must be atomic
