tests/lean/nonAtomicFieldName.lean
structure A where
  a.b : Nat
